--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
         </ol>
 
         </div>
+        
 
+    </section>
+    <section>
+        <div class="my-plans">
+            <img src="./images/icons/ecom.png" alt=""><img src="./images/icons/fb.png" alt=""><img src="./images/icons/js.png" alt=""><img src="./images/icons/youtube.png" alt="">
+
+
+        </div>
     </section>
 </main>
 
