--- a/index.html
+++ b/index.html
@@ -33,23 +33,50 @@
             </div>
         </div>
         <div class="main-head">
-        <h1 class="main-head2">My failures of<br>previous year</h1>
-        <p class="main-description">Contrary to popular belief, Lorem Ipsum is not <br>simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br>2000 years old. Richard McClintock.</p>
-        <ol class="checkbox">
-            <li class="lists">Contrary to popular belief, is not simply.</li>
-            <li class="lists">Contrary to popular belief, is not simply.</li>
-            <li class="lists">Contrary to popular belief, is not simply.</li>
-            <li class="lists">Contrary to popular belief, is not simply.</li>
-            <li class="lists">Contrary to popular belief, is not simply.</li>
-        </ol>
+            <h1 class="main-head2">My failures of<br>previous year</h1>
+            <p class="main-description">Contrary to popular belief, Lorem Ipsum is not <br>simply random text. It has
+                roots in a piece of <br> classical Latin literature from 45 BC, making it over <br>2000 years old.
+                Richard McClintock.</p>
+            <ol class="checkbox">
+                <li class="lists">Contrary to popular belief, is not simply.</li>
+                <li class="lists">Contrary to popular belief, is not simply.</li>
+                <li class="lists">Contrary to popular belief, is not simply.</li>
+                <li class="lists">Contrary to popular belief, is not simply.</li>
+                <li class="lists">Contrary to popular belief, is not simply.</li>
+            </ol>
 
         </div>
-        
+
 
     </section>
     <section>
         <div class="my-plans">
-            <img src="./images/icons/ecom.png" alt=""><img src="./images/icons/fb.png" alt=""><img src="./images/icons/js.png" alt=""><img src="./images/icons/youtube.png" alt="">
+            <h1 class="plans-title">My Plans</h1>
+            <div class="plans-logo">
+                <div class="webdev-plan">
+                    <img src="./images/icons/web.png" alt="">
+                    <h2 class="plans-head">Web Development</h2>
+                    <p class="plans-p">I want to start</p>
+
+                </div>
+                <div class="js-plan">
+                    <img src="./images/icons/js.png" alt="">
+                    <h2 class="plans-head">Javascript</h2>
+                    <p class="plans-p">I want to learn</p>
+
+                </div>
+                <div class="smoke-plans">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h2 class="plans-head">Smoking Habit</h2>
+                    <p class="plans-p">I want to end</p>
+                    </div>
+                    <div class="ecom-plans">
+                        <img src="./images/icons/ecom.png" alt="">
+                        <h2 class="plans-head">ecommerce</h2>
+                    <p class="plans-p">I want to develop</p>
+                    </div>
+               
+            </div>
 
 
         </div>
