--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     </section>
-    <section>
+    <section class="plans-section">
         <div class="my-plans">
             <h1 class="plans-title">My Plans</h1>
             <div class="plans-logo">
@@ -69,15 +69,25 @@
                     <img src="./images/icons/smoke.png" alt="">
                     <h2 class="plans-head">Smoking Habit</h2>
                     <p class="plans-p">I want to end</p>
-                    </div>
-                    <div class="ecom-plans">
-                        <img src="./images/icons/ecom.png" alt="">
-                        <h2 class="plans-head">ecommerce</h2>
+                </div>
+                <div class="ecom-plans">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h2 class="plans-head">ecommerce</h2>
                     <p class="plans-p">I want to develop</p>
-                    </div>
-               
+                </div>
+
             </div>
 
+
+
+        </div>
+        <div class="plans-banner">
+            <div class="plans-banner-title">
+            <h2>Awlays keep a positive <br> mindset</h2>
+            <button class="btn-2">
+                Call Now
+            </button>
+        </div>
 
         </div>
     </section>
