--- a/index.html
+++ b/index.html
@@ -7,94 +7,100 @@
     <title>New Year New Me</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-    <div class="banner">
-        <div class="banner-title">
-            <h1>All Thinks Are <br> Possible If You <br> believe</h1>
-
-
-            <p class="banner-p">There are many variations of passages of Lorem Ipsum <br>available, but the majority
-                have suffered alteration in some <br> form, by injected humour, or randomised words
-
-            </p>
-            <button class="btn">Contact Us</button>
-        </div>
-
-
-    </div>
-</header>
-<main>
-    <section class="main-section">
-        <div class="all-img">
-            <div class="main-img-bg">
-                <div class="main-img">
-                    <img src="./images/person.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="main-head">
-            <h1 class="main-head2">My failures of<br>previous year</h1>
-            <p class="main-description">Contrary to popular belief, Lorem Ipsum is not <br>simply random text. It has
-                roots in a piece of <br> classical Latin literature from 45 BC, making it over <br>2000 years old.
-                Richard McClintock.</p>
-            <ol class="checkbox">
-                <li class="lists">Contrary to popular belief, is not simply.</li>
-                <li class="lists">Contrary to popular belief, is not simply.</li>
-                <li class="lists">Contrary to popular belief, is not simply.</li>
-                <li class="lists">Contrary to popular belief, is not simply.</li>
-                <li class="lists">Contrary to popular belief, is not simply.</li>
-            </ol>
-
-        </div>
-
-
-    </section>
-    <section class="plans-section">
-        <div class="my-plans">
-            <h1 class="plans-title">My Plans</h1>
-            <div class="plans-logo">
-                <div class="webdev-plan">
-                    <img src="./images/icons/web.png" alt="">
-                    <h2 class="plans-head">Web Development</h2>
-                    <p class="plans-p">I want to start</p>
-
-                </div>
-                <div class="js-plan">
-                    <img src="./images/icons/js.png" alt="">
-                    <h2 class="plans-head">Javascript</h2>
-                    <p class="plans-p">I want to learn</p>
-
-                </div>
-                <div class="smoke-plans">
-                    <img src="./images/icons/smoke.png" alt="">
-                    <h2 class="plans-head">Smoking Habit</h2>
-                    <p class="plans-p">I want to end</p>
-                </div>
-                <div class="ecom-plans">
-                    <img src="./images/icons/ecom.png" alt="">
-                    <h2 class="plans-head">ecommerce</h2>
-                    <p class="plans-p">I want to develop</p>
-                </div>
-
-            </div>
-
-
-
-        </div>
-        <div class="plans-banner">
-            <div class="plans-banner-title">
-            <h2>Awlays keep a positive <br> mindset</h2>
-            <button class="btn-2">
-                Call Now
-            </button>
-        </div>
-
-        </div>
-    </section>
-</main>
 
 <body>
+    <header>
+        <div class="banner">
+            <div class="banner-title">
+                <h1>All Thinks Are <br> Possible If You <br> believe</h1>
+
+
+                <p class="banner-p">There are many variations of passages of Lorem Ipsum <br>available, but the majority
+                    have suffered alteration in some <br> form, by injected humour, or randomised words
+
+                </p>
+                <button class="btn">Contact Us</button>
+            </div>
+
+
+        </div>
+    </header>
+    <main>
+        <section class="main-section">
+            <div class="all-img">
+                <div class="main-img-bg">
+                    <div class="main-img">
+                        <img src="./images/person.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="main-head">
+                <h1 class="main-head2">My failures of<br>previous year</h1>
+                <p class="main-description">Contrary to popular belief, Lorem Ipsum is not <br>simply random text. It
+                    has
+                    roots in a piece of <br> classical Latin literature from 45 BC, making it over <br>2000 years old.
+                    Richard McClintock.</p>
+                <ol class="checkbox">
+                    <li class="lists">Contrary to popular belief, is not simply.</li>
+                    <li class="lists">Contrary to popular belief, is not simply.</li>
+                    <li class="lists">Contrary to popular belief, is not simply.</li>
+                    <li class="lists">Contrary to popular belief, is not simply.</li>
+                    <li class="lists">Contrary to popular belief, is not simply.</li>
+                </ol>
+
+            </div>
+
+
+        </section>
+        <section class="plans-section">
+            <div class="my-plans">
+                <h1 class="plans-title">My Plans</h1>
+                <div class="plans-logo">
+                    <div class="webdev-plan">
+                        <img src="./images/icons/web.png" alt="">
+                        <h2 class="plans-head">Web Development</h2>
+                        <p class="plans-p">I want to start</p>
+
+                    </div>
+                    <div class="js-plan">
+                        <img src="./images/icons/js.png" alt="">
+                        <h2 class="plans-head">Javascript</h2>
+                        <p class="plans-p">I want to learn</p>
+
+                    </div>
+                    <div class="smoke-plans">
+                        <img src="./images/icons/smoke.png" alt="">
+                        <h2 class="plans-head">Smoking Habit</h2>
+                        <p class="plans-p">I want to end</p>
+                    </div>
+                    <div class="ecom-plans">
+                        <img src="./images/icons/ecom.png" alt="">
+                        <h2 class="plans-head">ecommerce</h2>
+                        <p class="plans-p">I want to develop</p>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+            <div class="plans-banner">
+                <div class="plans-banner-title">
+                    <h2>Awlays keep a positive <br> mindset</h2>
+                    <button class="btn-2">
+                        Call Now
+                    </button>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+
 
 </body>
+<footer>
+
+</footer>
 
 </html>
