--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
     </div>
     <div class="footer-column2">
         <h3 class="section-title2">Subscribe</h3>
+        <input class="mail-box" type="text" placeholder="Enter Your Email">
+
 
         <button class="btn3">Subscribe</button>
 
